# catwhisper

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.simple.txt  CMakeLists.txt  CONTRIBUTING.md  README.md  rotrta.tex
benchmarks/: bench_faiss.py  compare.py  faiss_clustered_baseline.txt
docs/: API_DESIGN.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD_SYSTEM.md  DATA_STRUCTURES.md  GPU_COMPUTE.md  ROADMAP.md
examples/: CMakeLists.txt  basic_example.cpp  benchmark.cpp
include/catwhisper/: buffer.hpp  catwhisper.hpp  context.hpp  distance.hpp  error.hpp  index.hpp  index_flat.hpp  index_hnsw.hpp  index_ivf_flat.hpp  index_ivf_pq.hpp  pipeline.hpp  types.hpp  version.hpp
shaders/: CMakeLists.txt  assign_clusters.comp  distance_ip.comp  distance_l2.comp  distance_topk_amd.comp  distance_topk_batch.comp  distance_topk_fused.comp  ivf_distance.comp  pq_distance.comp  soa_repack.comp  topk_heap.comp  transpose_add.comp
src/core/: context.cpp  context_impl.hpp
src/distance/: distance.cpp
src/gpu/: buffer.cpp  pipeline.cpp
src/indexes/: index_flat.cpp  index_hnsw.cpp  index_ivf_flat.cpp  index_ivf_pq.cpp
tests/: CMakeLists.txt
tests/integration/: integration_test.cpp
tests/rotrta/: hnsw_benchmark.cpp  ivf_benchmark.cpp  pq_benchmark.cpp  rotrta_amd_benchmark.cpp  rotrta_benchmark.cpp
tests/unit/: buffer_test.cpp  context_test.cpp  error_test.cpp  index_flat_test.cpp  index_hnsw_test.cpp  index_ivf_flat_test.cpp  index_ivf_pq_test.cpp  main.cpp  minimal_test.cpp  types_test.cpp  whistle_test.cpp
todo/: thermal_discrepency_bench_bug_ivfpq.md
